test/library/packages/SortedMap/init/testInitGenericError2.good
$CHPL_HOME/modules/packages/SortedMap.chpl:nnnn: In initializer:
$CHPL_HOME/modules/packages/SortedMap.chpl:nnnn: warning: creating a sortedMap with value type C
$CHPL_HOME/modules/packages/SortedMap.chpl:nnnn: warning: which now means class type with generic management
$CHPL_HOME/modules/packages/SortedMap.chpl:nnnn: error: sortedMap value type cannot currently be generic
  testInitGenericError2.chpl:9: called as sortedMap.init(type keyType = int(64), type valType = C, param parSafe = false, comparator: DefaultComparator)
