test/library/packages/SortedMap/init/testInitGenericError2.chpl
use SortedMap;



class C {
  var x = 10;
}

var l = new sortedMap(int, C);  // C has generic management
writeln(l);
